fixed  overflow bug

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -38,7 +38,6 @@ body {
   line-height: 24px;
   overflow-x: hidden;
   max-width: 100vw;
-  overflow-y: hidden;
 }
 
 
